Seat map cell checkboxes, colors, bugfix
Added whole cell checkboxes to seat maps, changed font color for
seatnumbers, fixed a bug with movie name not showing on seating page and
added movie name to confirmation.

--- a/style/general.css
+++ b/style/general.css
@@ -91,6 +91,10 @@ p {
     font-family: 'Oswald', sans-serif;
     color: black;
   }
+  
+  p.seats {
+    color: #F2F2F2;
+  }
 
 /* important pagewide (or almost) paragraph text, but in black and white */
 p.bwemph {
@@ -349,6 +353,8 @@ img.ticketsponsors {
 ul li {
 list-style-type:none;
 }
+
+label { display: inline-block; width: 100%; }
 
 
 /* "css popups" 
